--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Swati's Portfolio</title>
+    <meta name="description" content="Swati Gadekar's Data Analyst Portfolio built with React, Vite, and Tailwind CSS." />
+    <meta name="author" content="Swati Gadekar" />
+    <title>Swati Gadekar | Data Analyst Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
-  <body class="bg-gray-50">
+  <body class="bg-background text-white font-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
